--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # logs
-*.log
+logs
+*.logs
 
 # Node Modules
-frontend/node_modules
-backend/node_modules
+frontend/node_modules/
+backend/node_modules/
 
 # Environment variables
 frontend/.env
